Fix cp_body_content max-width on IE

--- a/themes/cp_theme_d8/css/cp_theme_d8-ri.css
+++ b/themes/cp_theme_d8/css/cp_theme_d8-ri.css
@@ -391,6 +391,7 @@ h1.page-title {
 /** Body content **/
 .cp_body_content {
 	display: inline-block;
+	max-width: 100%;
 }
 
 .cp_body_content .col_1 {
